Kleopatra: Add feedback in search window
Closed, ResolvedPublic

Assigned To
Authored By
ebo
May 17 2023, 11:57 AM
Tags

Description

The "Lookup on server" window needs some improvements.

I suggest some progress indication (sometimes the search takes so long that you think Kleopatra maybe hangs) and information where it searches/found or not found something. At the moment if no key was found the user wonders if a search took place at all.

For searching I'd suggest something like "searching for/on WKD..." / "searching on $keyserver..."
In case not found: "No key matching the search criteria was found via WKD and keyserver $keyserver"

In case keys were found I'd like to see the the origin of the keys if I have the column "origin" displayed. It would help to choose if multiple candidates were found.
(The above was split off to T7067)

Additionally I'd like some hint for the uninitiated what "x certificates without name and mail address where ignored" means resp. where information regarding this message can be found. Maybe a tooltip?
(It was decided to drop the display of that message)

Event Timeline

aheinecke triaged this task as Wishlist priority.Jun 1 2023, 11:18 AM
aheinecke added a subscriber: aheinecke.

I agree, but can't give this priority because it is more work then it sounds since we need to start from the bottom with dirmngr feedback and then pass this all the way through our layers to kleo.

ebo renamed this task from Kleopatra: Improvements on search window to Kleopatra: Add feedback in search window.Jan 3 2024, 3:05 PM
ebo raised the priority of this task from Wishlist to High.Feb 15 2024, 9:10 AM
ebo added a project: vsd33.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

Changes so far:

  • I have removed the error message that was shown when nothing was found on the OpenPGP key server. We don't show an error for S/MIME or WKD lookup. And I think the error message was just annoying. The user sees whether something was found.
  • Kleopatra now shows a simple progress dialog with the text "Searching for matching certificates ..." and with up to 3 steps (for the up to three lookups). I don't think anybody (except testers) are interested in details where something is looked up.

Open:

  • I'm not convinced that a message like "No certificates were found." is really useful. Now that we have progress the users will see when the lookup is complete. And if no certificates are listed then it should be obvious that nothing was found.
  • I propose to remove the information text "x certificates without name and mail address where ignored". It's confusing and there's nothing the users can do to fix this.
  • I have to check if it's possible to set the origin. gpg sets the origin on import.
ikloecker changed the task status from Open to Testing.Mar 21 2024, 9:51 AM

More changes:

  • If no certificates are found then an overlay "No certificates found" is shown on top of the certificate list.
  • I have removed the confusing and unhelpful message "x certificates without name and mail address were ignored".

Open:

  • Showing the origin of a search results. I suggest to create a separate ticket for this.
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

Tested with 2025-05_gpg4win_Beta_23:

  • "no certificates found" message shows as expected
  • "Searching for matching certificates ..." is shown while searching
  • Aborting search in the progress window works

That should be all items to be tested for this ticket

ebo edited projects, added vsd33 (vsd-3.3.0); removed vsd33.