Don't show an error message if nothing is found on OpenPGP key server

GnuPG-bug-id: 6493
(cherry picked from commit 16f6e0c22b672f8ad2d3aa4ed1f46ea617218655)